--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,3 +1,3 @@
-*{margin:0;padding:0}h1{color:red;font-size:30px}.get-info{width:100px;text-align:center;line-height:30px;background:grey;color:#fff;font-size:18px}.order-list{margin:40px auto;max-width:800px;list-style:none}.order-list li{line-height:30px;color:#666;font-size:16px}.order-list li span{display:inline-block;border:1px solid #888;padding:0 10px}.order-list li span:nth-of-type(3){cursor:pointer}
+*{margin:0;padding:0}h1{color:red;font-size:30px}.get-info{width:100px;text-align:center;line-height:30px;background:grey;color:#fff;font-size:18px}.order-wrapper{margin:40px auto;max-width:960px !important;list-style:none}
 
 /*# sourceMappingURL=index.css.map */
