--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,13 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/styles/index.css' />
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-    <script src="/js/recofetch.min.js"></script>
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="/js/utils/recofetch.min.js"></script>
   </head>
   <body>
+    <!-- 头部 -->
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -15,23 +17,37 @@
         </div>
       </div>
     </nav>
+    <!-- 订单相关 -->
     <div class="panel panel-primary order-wrapper">
       <div class="panel-heading">订单列表</div>
+      <!-- 订单筛选条件 -->
       <div class="panel-body">
-        <button type="button" class="btn btn-primary get-info">获取订单</button>
-
-        <div class="dropdown">
-          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        <!-- 选择主机厂商 -->
+        <div class="dropdown screen-wrapper" style="display: inline-block;">
+          <button 
+            class="btn btn-default dropdown-toggle" 
+            type="button" 
+            id="dropdownMenu1" 
+            data-toggle="dropdown" 
+            aria-haspopup="true" 
+            aria-expanded="true">
             选择主机厂
             <span class="caret"></span>
           </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <li><a href="#">一汽</a></li>
-            <li><a href="#">上汽</a></li>
-            <li><a href="#">北汽</a></li>
+          <ul 
+            class="dropdown-menu host-business" 
+            aria-labelledby="dropdownMenu1">
+            <li><a data-id="1">一汽</a></li>
+            <li><a data-id="2">上汽</a></li>
+            <li><a data-id="3">北汽</a></li>
           </ul>
         </div>
+        <!-- 获取订单按钮 -->
+        <button 
+          type="button" 
+          class="btn btn-primary get-info">获取订单</button>
       </div>
+      <!-- 订单表格 -->
       <table class="table table-bordered">
         <thead>
           <tr>
