--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,10 @@
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="/js/utils/recofetch.min.js"></script>
+    <script src="/js/utils/config.js"></script>
+    <script>
+      console.log(config)
+    </script>
   </head>
   <body>
     <!-- 头部 -->
@@ -37,9 +41,6 @@
           <ul 
             class="dropdown-menu host-business" 
             aria-labelledby="dropdownMenu1">
-            <li><a data-id="1">一汽</a></li>
-            <li><a data-id="2">上汽</a></li>
-            <li><a data-id="3">北汽</a></li>
           </ul>
         </div>
         <!-- 获取订单按钮 -->
